Switch eth0 to ens33

--- a/configuration/salt/state/collectd/config/collectd.conf
+++ b/configuration/salt/state/collectd/config/collectd.conf
@@ -466,7 +466,7 @@ LoadPlugin vmem
 #</Plugin>
 
 <Plugin interface>
-	Interface "eth0"
+	Interface "ens33"
 	Interface "lo"
 	IgnoreSelected false
 </Plugin>
