--- a/configuration/salt/state/elastic/search/config/elasticsearch.yml
+++ b/configuration/salt/state/elastic/search/config/elasticsearch.yml
@@ -51,7 +51,7 @@ cluster.name: pcawg-elastic
 #
 # Set the bind adress to a specific IP (IPv4 or IPv6):
 #
-network.host: _eth0_
+network.host: _ens33_
 #
 # Set a custom port for HTTP:
 #
