Added nogpgcheck to yum commands

--- a/docker/butler-worker/Dockerfile
+++ b/docker/butler-worker/Dockerfile
@@ -8,9 +8,9 @@
 FROM centos:centos7
 MAINTAINER Paul Norton panorton@sdsc.edu
 
-RUN yum -y -q install epel-release git postgresql-devel python-psycopg2 python-devel gcc
+RUN yum -y -q --nogpgcheck install epel-release git postgresql-devel python-psycopg2 python-devel gcc
 
-RUN yum -y -q install python2-pip
+RUN yum -y -q --nogpgcheck install python2-pip
 RUN pip install pip==9.0.3
 RUN pip install -U setuptools==43.0.0s
 
