Adding Butler track files and setup

--- a/docker/butler-worker/Dockerfile
+++ b/docker/butler-worker/Dockerfile
@@ -47,3 +47,9 @@ COPY airflow.cfg /etc/opt/airflow/airflow.cfg
 ADD example-workflows /etc/opt/airflow/dags
 RUN chown -R airflow.airflow /etc/opt/airflow
 COPY set_airflow_env.sh /etc/profile.d/set_airflow_env.sh
+
+# Butler Tracker setup
+RUN mkdir /opt/butler
+ADD track /opt/butler
+RUN pip install -e /opt/butler/track
+RUN ln -s /opt/butler/track/tracker/bin/butler /usr/bin/butler
