pip install butler track from it's dir

--- a/docker/butler-worker/Dockerfile
+++ b/docker/butler-worker/Dockerfile
@@ -51,5 +51,6 @@ COPY set_airflow_env.sh /etc/profile.d/set_airflow_env.sh
 # Butler Tracker setup
 RUN mkdir /opt/butler
 ADD track /opt/butler
-RUN pip install -e /opt/butler/track
+WORKDIR /opt/butler/track
+RUN pip install -e .
 RUN ln -s /opt/butler/track/tracker/bin/butler /usr/bin/butler
